# Football_Genie_Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  setup.sh
backend/: Dockerfile  __init__.py  espn_api.py  football_data.py  langchain_tools.py  langgraph_agent.py  models.py  server.py  vector_store.py
frontend-react/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.css  App.jsx  index.css
frontend-react/src/__tests__/: AppContext.test.js  FootballGenie.test.js  api.test.js  components.test.js  setup.js
frontend-react/src/components/: ErrorBoundary.jsx  FootballGenie.css  FootballGenie.jsx  GameCard.css  GameCard.jsx  Notifications.css  Notifications.jsx  Sidebar.css  Sidebar.jsx
frontend-react/src/context/: AppContext.jsx
frontend-react/src/pages/: FantasyPage.css  FantasyPage.jsx  HighlightsPage.css  HighlightsPage.jsx  LandingPage.css  LandingPage.jsx  NewsPage.css  NewsPage.jsx  OddsPage.css  OddsPage.jsx  ProfilesPage.css  ProfilesPage.jsx  SchedulePage.css  SchedulePage.jsx  StandingsPage.css  StandingsPage.jsx
frontend-react/src/services/: api.js
scripts/: run-tests.ps1  start-backend.ps1  start-dev.ps1  start-frontend.ps1
tests/: test_api.py  test_espn_api.py  test_football_data.py  test_langchain_tools.py  test_langgraph_agent.py  test_models.py  test_server_endpoints.py  test_vector_store.py
